--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
 			<!--top-bar-->
 		</div>
 	</header>
+	<section class="header-bg-parent">
+	 <div class="header-col1">
+	 	<h5>WELCOME</h5>
+	 	<h2>VOCAL FOR LOCAL</h2>
+	 	<h2 class="typewrite" data-period="1000" data-type='["FOR LOCAL BUSINESS"]'></h2>
+	 	<p>expand your shop business<br>
+	 		<b>EXPERIENCE MORE WORRY LESS</b><br>
+			find shops near your locality and make your shopping easy.
+		</p>
+		<button class="comman-btn" type="button"> CONTACT TODAY</button>
+	 </div><!--header-col1--> 
+	 <div class="header-col2">
+	 	
+	 </div><!--header-col2-->
+			<div class="clear"></div><!--clear-->	
+
+	</section><!--header-bg-parent-->
 
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
   <Script src="js/externaljq.js" type="text/javascript"></Script>
