--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<title>V FOR L</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link type="text/css" rel="stylesheet" href="CSS/style.css" />
     <!--/*font awesome icons*/-->
 	<link type="text/css" rel="stylesheet" href="CSS/font-awesome.min.css" />
     <!--rubik font family -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&family=Rubik:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
 
-<link type="text/css" rel="stylesheet" href="CSS/style.css" />
+
 </head>
 
 <body>
@@ -25,8 +26,8 @@
                     <div class="menu">
                     	<a class="active" href="#home"><b>Home</b></a>
                     	<a href="#why-choose-us"><b>About Us</b></a>
-                    	<a href="#expand"><b>Services</b></a>
-                    	<a href="#add-your-shop"><b>Add Services</b></a>
+                    	<a href="#expand"><b>Businessess</b></a>
+                    	<a href="#add-your-shop"><b>Add Business</b></a>
                     	<a href="#contact-us"><b>Contact Us</b></a>
                     </div>
                     <div class="clear"></div><!--clear-->
@@ -159,6 +160,49 @@
 		<!--container-->
 	</section>
 
+	<section id="expand">
+		<div class="text-center">
+			<h5 class="common-h5">Experience</h5>
+			<h2 class="common-h2">Pay for Qualified Traffic</h2>
+		</div>
+		<!--text-center-->
+		<div class="expand-img-col">
+			<div class="expand-img">
+				<img src="'images/expand-home-img.png'"
+				<div class="expand-img-info">
+					<i class="fa fa-mobile-phone"></i>
+					<h2>Expand your digital prescence</h2>
+					<p>Your app is your tool</p>
+					<a href="#">Get in touch<i class="fa fa-long-arrow-right"></i></a>
+				</div>
+			</div>
+
+		</div>
+		<!--expand-img-col-->
+		<div class="expand-img-info-col">
+
+		</div>
+		<div class="clear"</div>
+		<!--expand-img-info-col-->
+	</section>
+
+	<Section id="contact-us">
+		<div class="container">
+			<div class="form-par">
+				<h2>GET IN TOUCH WITH US !</h2> 
+				<form>
+					<input type="text" placeholder="Your Name" class="f-name form-com"/>
+					<input type="email" placeholder="E-mail" class="em-input form-com"/>
+					<input type="tel" id="phone" name="phone" class="phone-input form-com"
+					placeholder="Mobile No." pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required/>
+					<input type="text" placeholder="Website" class="web-input form-com"/>
+					<input type="submit" value="submit" class="submit-btn"/>
+
+
+				</form>
+			</div>
+		</div>
+	</Section>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <Script src="js/externaljq.js" type="text/javascript"></Script>
 </body>
