--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
     <!--rubik font family -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&family=Rubik:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
-	<header>
+	<div id="arrow">
+		<i class="fa fa-arrow-up" aria-hidden="true"></i>
+	</div>
+	<header id="home">
 		<div class="container">
 			<div class="top-bar">
 				<div class="nav-col">
@@ -26,7 +29,7 @@
                     <div class="menu">
                     	<a class="active" href="#home"><b>Home</b></a>
                     	<a href="#why-choose-us"><b>About Us</b></a>
-                    	<a href="#expand"><b>Businessess</b></a>
+                    	<a href="business.html"><b>Businessess</b></a>
                     	<a href="#add-your-shop"><b>Add Business</b></a>
                     	<a href="#contact-us"><b>Contact Us</b></a>
                     </div>
@@ -201,8 +204,43 @@
 
 				</form>
 			</div>
+		</div><!--container-->
+	</Section><!--contact-us-->
+
+	<footer>
+		<div class="container">
+			<div class="footer-col">
+			<h3>About Us</h3>	
+			<p>We Focus on the needs of small to middle market businesses to improve and grow their return,so that you site will withstand the test of time. We care about your business, which is why we work with you.</p>
+			<div class="social-menu-footer">
+				<a href="#"><i class="fa fa-facebook-official"></i></a>
+				<a href="#"><i class="fa fa-twitter-square"></i></a>
+				<a href="#"><i class="fa fa-instagram"></i></a>
+				<a href="#"><i class="fa fa-youtube-square"></i></a>
+			</div>
+			</div><!--footer-col-->
+			<div class="footer-col footer-2-col">
+			<h3>Quick Links</h3>	
+			<ul>
+				<li>Home</li>
+				<li>About Us</li>
+				<li><a href="business.html">Businesses</a></li>
+                <li>Add Business</li>
+                <li>Contact Us</li>
+			</ul>
+			</div><!--footer-col-->
+			<div class="footer-col">
+			<h3>Contact Us</h3>	
+			<p><i class="fa fa-envelope-o"></i> <a href="mailto:demo@gmail.com">demo@gmail.com</a>
+			</p>
+			<p><i class="fa fa-mobile-phone"></i> <a href="tel:7652000000">7652000000</a></p>
+			<p><i class="fa fa-map-o"></i> <span>Geetha Bhawan, Indore, 452005, India</span></p>
+			</div><!--footer-col-->
+			<div class="clear"></div>
+			<hr class="footer-hr">
+			<p class="copyright-footer">&copy; 2021-VocalforLocal. All Rights Reserved.</p>
 		</div>
-	</Section>
+	</footer>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <Script src="js/externaljq.js" type="text/javascript"></Script>
 </body>
